log.txt
######################### Начало ####################################################################
Время начала: Пт 21 янв 2022 10:07:04 +05

Переходим в каталог "/home/mika/1MyAll1/projects/121212121212"
Спрашиваем пользователя хочет ли он отчистить консоль
Согласился
Отчищаем консоль

Ошибки "javac ": 
--------------------------------------------------------------------
Main.java:3: error: <identifier> expected
	public static String 
	                    ^
1 error
--------------------------------------------------------------------

"javac " выдала ошибки?
Да

Время окончания: Пт 21 янв 2022 10:07:07 +05
#####################-----Конец-----##############################
.
.
.
